Fix display overflow
justify-content: flex-end; was bugging the overflow: scroll; of the
expression div of the display so i replace with margin-left: auto; for
the first element

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -98,8 +98,11 @@ body.dark .theme-toggle::after {
 .expression {
   min-height: 1.25em;
   display: flex;
-  justify-content: flex-end;
-  gap: 0.25rem;
+  gap: 0.5rem;
+}
+
+#first_term {
+  margin-left: auto;
 }
 
 .expression .symbol {
